--- a/src/app/admin/admin.component.css
+++ b/src/app/admin/admin.component.css
@@ -1,17 +1,26 @@
 #mySidenav a {
-  position: fixed; /* Position them relative to the browser window */
-  left: -100px; /* Position them outside of the screen */
-  transition: 0.3s; /* Add transition on hover */
-  padding: 15px; /* 15px padding */
+  position: fixed;
+  /* Position them relative to the browser window */
+  left: -100px;
+  /* Position them outside of the screen */
+  transition: 0.3s;
+  /* Add transition on hover */
+  padding: 15px;
+  /* 15px padding */
   /* Set a specific width */
-  text-decoration: none; /* Remove underline */
-  font-size: 20px; /* Increase font size */
-  color: white; /* White text color */
-  border-radius: 0 5px 5px 0; /* Rounded corners on the top right and bottom right side */
+  text-decoration: none;
+  /* Remove underline */
+  font-size: 20px;
+  /* Increase font size */
+  color: white;
+  /* White text color */
+  border-radius: 0 5px 5px 0;
+  /* Rounded corners on the top right and bottom right side */
 }
 
 #mySidenav a:hover {
-  left: 0; /* On mouse-over, make the elements appear as they should */
+  left: 0;
+  /* On mouse-over, make the elements appear as they should */
 }
 
 /* The about link: 20px from the top with a green background */
@@ -22,5 +31,6 @@
 
 #productlist {
   top: 180px;
-  background-color: #47d147; /* Blue */
+  background-color: #47d147;
+  /* Blue */
 }
