--- a/src/app/breakfast/breakfast.component.css
+++ b/src/app/breakfast/breakfast.component.css
@@ -12,6 +12,5 @@
 
 h1 {
   animation: tilt-in-bottom-2 2s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-  -webkit-animation: tilt-in-bottom-2 2s cubic-bezier(0.25, 0.46, 0.45, 0.94)
-    both;
+  -webkit-animation: tilt-in-bottom-2 2s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 }
