--- a/src/app/myprofile/myprofile.component.html
+++ b/src/app/myprofile/myprofile.component.html
@@ -1,26 +1,25 @@
 <div class="container">
-    <div class="row">
-        <div class="col-sm-3"></div>
-        <div class="col-sm-6 d-block mx-auto">
-            <div class="card" id="card" style="background-color: white; border: 2px solid yellow;">
-                <img src="https://thumbs.dreamstime.com/b/user-profile-icon-creative-trendy-colorful-round-button-illustration-isolated-156511788.jpg"
-                    class=" d-block mx-auto" alt="" style="width: 50%; height:50%; padding:20px; border-radius: 350px;">
-                <div class="card-body text-center">
-                    <h5 class="username" style="font-weight: bold;   font-family: 'cursive', Amita ;"><i
-                            class="fa fa-user" aria-hidden="true" style="margin-right: 10px;color: gray;"></i>
-                        {{userfromBackend?.username}}</h5>
-                    <h5 class="username" style="font-weight: bold;  font-family: 'cursive', Amita ;"><i
-                            class="fa fa-envelope" aria-hidden="true" style="margin-right: 10px;color:#4285F4;"></i>
-                        {{userfromBackend?.email}}</h5>
-                    <h5 class="username" style="font-weight: bold;   font-family: 'cursive', Amita ;"><i
-                            class="fa fa-mobile" aria-hidden="true"
-                            style="margin-right: 10px;color:lightpink;"></i>{{userfromBackend?.number}}</h5>
-                    <h5 class="username" style="font-weight: bold;   font-family: 'cursive', Amita ;"><i
-                            class="fa fa-map-marker" aria-hidden="true"
-                            style="margin-right: 10px;color:yellow"></i>{{userfromBackend?.address}}</h5>
-                </div>
-            </div>
+  <div class="row">
+    <div class="col-sm-3"></div>
+    <div class="col-sm-6 d-block mx-auto">
+      <div class="card" id="card" style="background-color: white; border: 2px solid yellow;">
+        <img
+          src="https://thumbs.dreamstime.com/b/user-profile-icon-creative-trendy-colorful-round-button-illustration-isolated-156511788.jpg"
+          class=" d-block mx-auto" alt="" style="width: 50%; height:50%; padding:20px; border-radius: 350px;">
+        <div class="card-body text-center">
+          <h5 class="username" style="font-weight: bold;   font-family: 'cursive', Amita ;"><i class="fa fa-user"
+              aria-hidden="true" style="margin-right: 10px;color: gray;"></i>
+            {{userfromBackend?.username}}</h5>
+          <h5 class="username" style="font-weight: bold;  font-family: 'cursive', Amita ;"><i class="fa fa-envelope"
+              aria-hidden="true" style="margin-right: 10px;color:#4285F4;"></i>
+            {{userfromBackend?.email}}</h5>
+          <h5 class="username" style="font-weight: bold;   font-family: 'cursive', Amita ;"><i class="fa fa-mobile"
+              aria-hidden="true" style="margin-right: 10px;color:lightpink;"></i>{{userfromBackend?.number}}</h5>
+          <h5 class="username" style="font-weight: bold;   font-family: 'cursive', Amita ;"><i class="fa fa-map-marker"
+              aria-hidden="true" style="margin-right: 10px;color:yellow"></i>{{userfromBackend?.address}}</h5>
         </div>
-        <div class="col-sm-3"></div>
+      </div>
     </div>
+    <div class="col-sm-3"></div>
+  </div>
 </div>
