--- a/src/app/spices-masalas/spices-masalas.component.css
+++ b/src/app/spices-masalas/spices-masalas.component.css
@@ -4,9 +4,11 @@
     transform: translateZ(-700px) translateY(-500px);
     opacity: 0;
   }
+
   40% {
     opacity: 0.6;
   }
+
   100% {
     transform: translateZ(0) translateY(0);
     opacity: 1;
@@ -14,6 +16,5 @@
 }
 
 h1 {
-  animation: tracking-in-expand-fwd-top 2s cubic-bezier(0.215, 0.61, 0.355, 1)
-    both;
+  animation: tracking-in-expand-fwd-top 2s cubic-bezier(0.215, 0.61, 0.355, 1) both;
 }
