images added for components

--- a/src/app/othergrocery/othergrocery.component.html
+++ b/src/app/othergrocery/othergrocery.component.html
@@ -1,4 +1,4 @@
-<img src="https://64.media.tumblr.com/0f1c1ecb658d3e9c13a7a06aa17b3ef5/tumblr_mtqnboxQwQ1r659dno1_500.gifv" alt=""
+<img src="../../assets/tumblr_mtqnboxQwQ1r659dno1_500.webp" alt=""
   class="d-block mx-auto  w-75" style="height: max-content;">
 <div class="container-fluid mt-4">
   <div class="row row-cols-1 row-cols-sm-4 g-4" style="justify-content: center;">
