--- a/src/app/cookingoils/cookingoils.component.html
+++ b/src/app/cookingoils/cookingoils.component.html
@@ -1,4 +1,4 @@
-<img src="http://dhamanienterprises.com/wp-content/uploads/2014/12/banner2.jpg" alt="" class="w-100"
+<img src="../../assets/edible oils.jpeg" alt="" class="w-100"
   style="height: 25%;">
 <div class="container-fluid mt-4">
   <div class="row row-cols-1 row-cols-sm-4 g-4" style="justify-content: center;">
