--- a/src/app/dairyproducts/dairyproducts.component.html
+++ b/src/app/dairyproducts/dairyproducts.component.html
@@ -1,4 +1,4 @@
-<img src="https://www.urjanaturals.com/images/banner5.jpg" alt="" class="w-100">
+<img src="../../assets/Diary.jpeg" alt="" class="w-100">
 <div class="container-fluid mt-4">
   <div class="row row-cols-1 row-cols-sm-4 g-4" style="justify-content: center;">
     <div class="col" *ngFor="let product of dairyarray">
