--- a/src/app/dals-pulses/dals-pulses.component.html
+++ b/src/app/dals-pulses/dals-pulses.component.html
@@ -1,4 +1,4 @@
-<img src="https://www.bemarket.store/wp-content/uploads/2020/11/Food-Grains-Sliders-01-scaled.jpg" alt="" class="w-100">
+<img src="../../assets/dals and pulses.jpeg" alt="" height="300px" class="w-100">
 <div class="container-fluid mt-4">
   <div class="row row-cols-1 row-cols-sm-4 g-4" style="justify-content: center;">
     <div class="col" *ngFor="let product of dalsarray">
