--- a/src/app/dry-fruits/dry-fruits.component.html
+++ b/src/app/dry-fruits/dry-fruits.component.html
@@ -1,4 +1,4 @@
-<img src="https://www.zaamoon.com/uploads/zaamoon/categories/dry-fruits-banner---sub-cattegory-banners-498952_m.jpg"
+<img src="../../assets/dry-fruits-banner.jpg"
   alt="" class="w-100">
 <div class="container-fluid mt-4">
   <div class="row row-cols-1 row-cols-sm-4 g-4" style="justify-content: center;">
