--- a/src/app/flours-grains/flours-grains.component.html
+++ b/src/app/flours-grains/flours-grains.component.html
@@ -1,6 +1,6 @@
 <img
-  src="https://www.channelnewsasia.com/blob/10806820/b08f4e1d286258e9a1b9e3e19b8a6cce/hero-image-wholegrains-data.gif"
-  alt="" class="w-100" height="450px" />
+  src="../../assets/flours and grains.jpeg"
+  alt="" class="w-100" height="300px" width="100%" />
 <div class="container-fluid mt-4">
   <div class="row row-cols-1 row-cols-sm-4 g-4" style="justify-content: center">
     <div class="col" *ngFor="let product of floursgrainsarray">
