--- a/src/app/rice-products/rice-products.component.html
+++ b/src/app/rice-products/rice-products.component.html
@@ -1,4 +1,4 @@
-<img src="http://www.rapidflourmills.com/img1/banner-3.jpg" alt="" class="w-100">
+<img src="../../assets/banner-3.jpg" alt="" class="w-100">
 <div class="container-fluid mt-4">
   <div class="row row-cols-1 row-cols-sm-4 g-4" style="justify-content: center;">
     <div class="col" *ngFor="let product of riceproductsarray">
