--- a/src/app/salt/salt.component.html
+++ b/src/app/salt/salt.component.html
@@ -1,4 +1,4 @@
-<img src="https://jammubasket.com/images/categories/banners/5_Category_Banner_1600798205.jpeg" alt="" class="w-100">
+<img src="../../assets/5_Category_Banner_1600798205.jpeg" alt="" class="w-100">
 <div class="container-fluid mt-4">
   <div class="row row-cols-1 row-cols-sm-4 g-4" style="justify-content: center;">
     <div class="col" *ngFor="let product of saltarray">
