--- a/src/app/spices-masalas/spices-masalas.component.html
+++ b/src/app/spices-masalas/spices-masalas.component.html
@@ -1,4 +1,4 @@
-<img src="http://www.sunnytrexim.com/images/banner-spices.jpg" alt="" class="w-100">
+<img src="../../assets/banner-spices.jpg" alt="" class="w-100">
 <div class="container-fluid mt-4">
   <div class="row row-cols-1 row-cols-sm-4 g-4" style="justify-content: center;">
     <div class="col" *ngFor="let product of spicesarray">
