added spinner and few local images upgrade

--- a/src/app/billing/billing.component.html
+++ b/src/app/billing/billing.component.html
@@ -4,7 +4,7 @@
       <!-- style="background-color:skyblue;height:100vh;" -->
       <div class="col-sm-7 example1 my-5">
         <img
-          src="https://image.freepik.com/free-vector/guy-delivers-parcel-home-door-fast-delivery-service-woman-receives-order-food-bag-from-courier-express-shipping-cartoon-design_284092-233.jpg"
+          src="../../assets/guy-delivers-parcel-home-door-fast-delivery-service-woman-receives-order-food-bag-from-courier-express-shipping-cartoon-design_284092-233.jpg"
           alt="Registeration Image" class="img d-block mx-auto  w-100" style="height: max-content;">
       </div>
       <div class="col-sm-5 example2 mt-5 ">
