--- a/src/app/hdfc/hdfc.component.html
+++ b/src/app/hdfc/hdfc.component.html
@@ -1,6 +1,6 @@
 <div class="card mt-3">
   <div class="card-body">
-    <img src="https://img.dmart.in/images/rwd/banners/curated/10apr21-curated-summer.jpg" class="hdfc-image mt-2 "
+    <img src="../../assets/10apr21-curated-summer-cool-fresh.jpg" class="hdfc-image mt-2 "
       width="100%" alt="">
   </div>
 </div>
