--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -37,4 +37,13 @@
     </div>
   </div>
 </div>
+
+<div *ngIf="loading" id="overlay" class="spinner">
+  <img src="../../assets/generatorphp-thumb.gif" alt="Wait" alt="Loading" />
+  <div id="overlayText">
+    Wait
+    Loading
+  </div>
+</div>
+
 <app-footer></app-footer>
