--- a/src/app/myprofile/myprofile.component.html
+++ b/src/app/myprofile/myprofile.component.html
@@ -4,7 +4,7 @@
     <div class="col-sm-6 d-block mx-auto">
       <div class="card" id="card" style="background-color: white; border: 2px solid yellow;">
         <img
-          src="https://thumbs.dreamstime.com/b/user-profile-icon-creative-trendy-colorful-round-button-illustration-isolated-156511788.jpg"
+          src="../../assets/user-profile-icon-creative-trendy-colorful-round-button-illustration-isolated-156511788.jpg"
           class=" d-block mx-auto" alt="" style="width: 50%; height:50%; padding:20px; border-radius: 350px;">
         <div class="card-body text-center">
           <h5 class="username" style="font-weight: bold;   font-family: 'cursive', Amita ;"><i class="fa fa-user"
