--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,7 +1,7 @@
 <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active" data-bs-interval="2000">
-      <img src="https://www.bigbasket.com/media/uploads/banner_images/2104132_ice-creams_400.jpg" class="d-block w-100"
+      <img src="../../assets/ice-creams_400.jpg" class="d-block w-100"
         alt="..." style="width: 930px;height:500px;">
     </div>
     <div class="carousel-item" data-bs-interval="2000">
@@ -11,7 +11,7 @@
       <img src="../../assets/3rd carousel.jpeg" class="d-block w-100" alt="..." style="width: 930px;height:500px;">
     </div>
     <div class="carousel-item" data-bs-interval="4000">
-      <img src="https://media2.giphy.com/media/Q5cJ5bIR7x0GVVRpnp/source.gif" class="d-block w-100" alt="..."
+      <img src="../../assets/cadbury.gif" class="d-block w-100" alt="..."
         style="width: 930px;height:500px;">
     </div>
   </div>
