--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="footer-div5 footer-sm"
-  style="background-image:url('https://png.pngtree.com/thumb_back/fh260/background/20190221/ourmid/pngtree-texture-geometric-black-metal-gradient-image_17809.jpg')">
+  style="background-image:url('../../assets/pngtree-texture-geometric-black-metal-gradient-image_17809.jpg')">
   <div class="div-col-1">
     <section>
       <ul style="list-style: none;">
