--- a/src/app/othergrocery/othergrocery.component.html
+++ b/src/app/othergrocery/othergrocery.component.html
@@ -35,4 +35,13 @@
   </div>
 </div>
 <br>
+
+<div *ngIf="loading" id="overlay" class="spinner">
+  <img src="../../assets/generatorphp-thumb.gif" alt="Wait" alt="Loading" />
+  <div id="overlayText">
+    Wait
+    Loading
+  </div>
+</div>
+
 <app-footer></app-footer>
