--- a/src/app/pagenotfound/pagenotfound.component.html
+++ b/src/app/pagenotfound/pagenotfound.component.html
@@ -1,1 +1,1 @@
-<h1 class="text text-center mt-5" style="font: 50px; color: red;">Oops!!!U entered Invalid Path</h1>
+<h1 class="text text-center mt-5" style="font: 50px; color: red;">Oops!!!U have entered Invalid Path</h1>
