--- a/src/app/viewproduct/viewproduct.component.html
+++ b/src/app/viewproduct/viewproduct.component.html
@@ -2,7 +2,7 @@
   <div class="row mt-4">
     <div class="col-sm-5">
       <img src={{product.productimage}} alt="" class="img mt-4 d-block mx-auto"
-        style="width: max-content; height: max-content;">
+        style="width: 180px; height: 250px;">
     </div>
     <div class=" col-sm-7 d-flex">
       <div class="align-self-center">
