--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,68 @@
-@keyframes fade-in{0%{opacity:0}100%{opacity:1}}
-  body{
-      animation:fade-in 1.2s cubic-bezier(.39,.575,.565,1.000) both
+/* @keyframes fade-in {
+  0% {
+    opacity: 0
   }
+
+  100% {
+    opacity: 1
+  }
+}
+
+body {
+  animation: fade-in 1.2s cubic-bezier(.39, .575, .565, 1.000) both
+} */
+
+/* .spinner {
+  position: absolute;
+  height: 100px;
+  width: 100px;
+  top: 50%;
+  left: 50%;
+  margin-left: -50px;
+  margin-top: -50px;
+  border: 16px solid blue;
+  border-top: 16px solid white;
+  border-radius: 50%;
+  animation: load 1s linear infinite;
+  background-size: 100%;
+} */
+
+#overlay>img {
+  position: absolute;
+  height: 100px;
+  width: 100px;
+  margin-left: -50px;
+  margin-top: -50px;
+  top: 50%;
+  left: 50%;
+  z-index: 10;
+  height: 100px;
+  width: 100px;
+}
+
+#overlayText {
+  position: absolute;
+  top: 365px;
+  left: 330px;
+  z-index: 11;
+}
+
+#overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+  z-index: 2;
+  background-color: #222;
+  opacity: 0.7;
+}
+
+/* @keyframes load {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+} */
